--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropdown": "^1.9.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
