--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@googlemaps/react-wrapper": "^1.1.23",
+    "@mui/material": "^5.4.3",
     "@react-google-maps/api": "^2.7.0",
-    "chart.js": "^3.7.0",
     "firebase": "^9.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-dropdown": "^1.9.2"
   },
